--- a/login/login.html
+++ b/login/login.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brose</title>
     <link rel="stylesheet" href="login.css">
-    <link rel="shortcut icon" href="images/Imagem1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/Imagem1.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
         <div class="box-imagem">
-            <img src="images/logobrose.png" alt="imagem-formulario">
+            <img src="../images/Imagem3.png" alt="imagem-formulario">
         </div>
         <div class="formulario">
-            <form action="#">
+            <form action="../index.html">
                 <div class="form">
                     <div class="title">
                         <h1>Faça seu login</h1>
@@ -30,7 +30,7 @@
                     <input type="password" name="Senha" id="Senha" placeholder="Digite sua senha" required>
                 </div>
                 <div class="grupo-input">
-                    <button><a href="index.html">Entrar</a></button>
+                    <button><a>Entrar</a></button>
                 </div> 
             </div>                
             </form>
