--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -11,7 +11,7 @@
   <header class="main-header">
     <nav>
       <ul class="nav-links">
-        <li><img src="images/logobrose.png" alt="Logoheader" /></li>
+        <li><img src="../images/logobrose.png" alt="Logoheader" /></li>
         <li><a href="pages/index.html">Estrutura de Funcionários</a></li>
         <li><a href="pages/skillsMatrix.html">Skills Matrix</a></li>
         <li><a href="pages/relatorios.html">Relatórios</a></li>
