--- a/login/login.html
+++ b/login/login.html
@@ -22,12 +22,12 @@
 
                 <div class="grupo-input">
                     <label for="e-mail">E-mail</label>
-                    <input type="text" name="e-mail" id="e-mail" placeholder="Digite seu e-mail" required>
+                    <input type="text" id="e-mail" placeholder="Digite seu e-mail" required>
                 </div>
 
                 <div class="grupo-input">
                     <label for="password">Senha</label>
-                    <input type="password" name="Senha" id="Senha" placeholder="Digite sua senha" required>
+                    <input type="password" id="Senha" placeholder="Digite sua senha" required>
                 </div>
                 <div class="grupo-input">
                     <button><a>Entrar</a></button>
