--- a/pages/skillsMatrix.html
+++ b/pages/skillsMatrix.html
@@ -11,27 +11,29 @@
   <header class="main-header">
     <nav>
       <ul class="nav-links">
-        <li><img src="images/logobrose.png" alt="Logoheader" /></li>
-        <li><a href="index.html">Estrutura de Funcionários</a></li>
-        <li><a href="pages/skillsMatrix.html">Skills Matrix</a></li>
-        <li><a href="pages/relatorios.html">Relatórios</a></li>
-        <li><a href="pages/notificacoes.html">Notificações</a></li>
+        <li><a href="../index.html"><img src="../images/logobrose.png" alt="Logoheader" /></a></li>
+        <li><a href="../index.html">Estrutura de Funcionários</a></li>
+        <!-- <li><a href="pages/skillsMatrix.html">Skills Matrix</a></li> -->
+        <!-- <li><a href="pages/relatorios.html">Relatórios</a></li> -->
+        <!-- <li><a href="pages/notificacoes.html">Notificações</a></li> -->
       </ul>
     </nav>
 
     <div class="header-right">
       <label for="status-filter">Buscar:</label>
-      <select id="status-filter">
+      <!-- <select id="status-filter">
         <option value=""></option>
         <option value="CUR">CUR CURITIBA</option>
         <option value="GOI">GOI GOIÂNIA</option>
         <option value="SAO">SAO SÃO PAULO</option>
-      </select>
+      </select> -->
       <input type="text" placeholder="Buscar..." />
       <div class="user-logout">
+        <a href="../login/login.html">
         <button class="logout">
-          <img src="images/sair.png" alt="Logotipo">
+          <img src="../images/sair.png" alt="Logotipo">
         </button>
+      </a>
       </div>
     </div>
   </header>
