--- a/pages/skillsMatrix.html
+++ b/pages/skillsMatrix.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills Matrix</title>
   <link rel="stylesheet" href="skillsMatrix.css" />
+  <link rel="shortcut icon" href="../images/Imagem1.png" type="image/x-icon">
 </head>
 <body>
   <!-- Header -->
