--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <div id="viewEmployeeModal" class="modal">
     <div class="viewmodal-content">
       <span class="close" onclick="closeViewEmployee()">&times;</span>
-      <h2>Detalhes do Funcionário</h2>
+      <h2 style="color: black;">Detalhes do Funcionário</h2>
       <p><strong>Nome:</strong> <span id="viewEmployeeName"></span></p>
       <p><strong>Cargo:</strong> <span id="viewEmployeeRole"></span></p>
       <p><strong>Departamento:</strong> <span id="viewEmployeeDepartment"></span></p>
