--- a/_MODELO/login/login.html
+++ b/_MODELO/login/login.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="grupo-input">
-                    <label for="e-mail">E-mail</label>
+                    <!-- <label for="e-mail">E-mail</label> -->
                     <input type="text" name="e-mail" id="e-mail" placeholder="Digite seu e-mail" required>
                 </div>
 
