--- a/pages/skillsMatrix.html
+++ b/pages/skillsMatrix.html
@@ -14,33 +14,31 @@
     <ul class="nav-links">
       <li><a href="../pages/estruturaDeFuncionarios.html"><img src="../images/logobrose.png" alt="Logoheader" /></a></li>
       <li><a class="texto" href="../pages/estruturaDeFuncionarios.html">Estrutura de Funcionários</a></li>
-      <li><a href="../pages/notificacoes.html">Notificações</a></li>
+      <!-- <li><a href="../pages/notificacoes.html">Notificações</a></li> -->
     </ul>
   </nav>
   <div class="header-right">
-    <label for="status-filter">Buscar:</label>
-    <input type="text" placeholder="Buscar..." />
-  <div class="search">
-    <a href="#">
-      <button class="pesquisar">
-        <img src="../images/lupa.png" alt="lupa">
-      </button>
-    </a>
-  </div>
-  <div class="user-logout">
-    <a href="../login/login.html">
-      <button class="logout">
-        <img src="../images/sair.png" alt="Logotipo">
-      </button>
-    </a>
-  </div>
-  <div>
-    <a href="#">
-      <button class="notificacoes">
-        <img src="../images/notificacao.png" alt="notificacao">
-      </button>
-    </a>
-  </div>
+    <div>
+      <a href="#">
+        <button class="documento">
+          <img src="../images/documento.png" alt="documento">
+        </button>
+      </a>
+    </div>
+    <div>
+      <a href="#">
+        <button class="notificacoes">
+          <img src="../images/notificacao.png" alt="notificacao">
+        </button>
+      </a>
+    </div>
+    <div class="user-logout">
+      <a href="../login/login.html">
+        <button class="logout">
+          <img src="../images/sair.png" alt="Logotipo">
+        </button>
+      </a>
+    </div>
   </div>
 </header>  
 
@@ -54,19 +52,84 @@
       </div>
   </div>
 
-  <table id="employeesTable">
+  <!-- Tabela -->
+  <table class="employeesTable">
     <thead>
       <tr>
         <th>NR</th>
-        <th>Nome</th>
-        <th>E-mail</th>
+        <th>NOME</th>
+        <th>E-MAIL</th>
       </tr>
       <tr>
         <td>0279283</td>
         <td>Carlos</td>
-        <td></td>
+        <td>carlos@gmail.com</td>
+      </tr>
+      <tr>
+        <th>POSIÇÃO</th>
+        <th>CARGO</th>
+        <th>ÚLTIMA AVALIAÇÃO</th>
+      </tr>
+      <tr>
+        <td>Curitiba</td>
+        <td>TI</td>
+        <td>11/20/2024</td>
       </tr>
     </thead>
+  </table>
+  <table class="table2">
+    <thead>
+      <tr>
+        <th>SKILLS</th>
+        <th>NÍVEL</th>
+        <th>PLANO DE DESENVOLVIMENTO</th>
+      </tr>
+      <tr>
+        <td>REQUISITOS LEGAIS APLICAVEIS</td>
+        <td class="num"><input type="number" class="real" value="1" min="0" max="10" onchange="calculateProgress()"></td>
+        <td><textarea name="text" id="text-area"></textarea></td>
+      </tr>
+      <tr>
+        <td>LSS CONHECIMENTOS GERAIS - WHITE BELT</td>
+        <td class="num"><input type="number" class="real" value="1" min="0" max="10" onchange="calculateProgress()"></td>
+        <td><textarea name="text" id="text-area"></textarea></td>
+      </tr>
+      <tr>
+        <td>LIDERANÇA</td>
+        <td class="num"><input type="number" class="real" value="1" min="0" max="10" onchange="calculateProgress()"></td>
+        <td><textarea name="text" id="text-area"></textarea></td>
+      </tr>
+      <tr>
+        <td>TREINAMENTO PROBLEM SOLVING</td>
+        <td class="num"><input type="number" class="real" value="1" min="0" max="10" onchange="calculateProgress()"></td>
+        <td><textarea name="text" id="text-area"></textarea></td>
+      </tr>
+    </thead>
+  </table>
+
+     <!-- Modal -->
+     <div style="display: none;" class="modal" id="skillModal">
+      <div class="modal-header">
+          <h2>ADD SKILL AO FUNCIONÁRIO</h2>
+          <button class="close-btn">&times;</button>
+      </div>
+      <div class="modal-body">
+          <div class="input-group">
+              <label for="skillName">NOME DA SKILL</label>
+              <input type="text" id="skillName">
+          </div>
+          <div class="input-group">
+              <label for="skillLevel">NÍVEL DA SKILL</label>
+              <input type="text" id="skillLevel">
+          </div>
+          <div class="input-group">
+              <label for="developmentPlan">PLANO DE DESENVOLVIMENTO</label>
+              <textarea name="developmentPlan" id="developmentPlan"></textarea>
+          </div>
+          <button class="save-btn">SALVAR</button>
+      </div>
+  </div>
+
 </main>
 </body>
 </html>
